@@ -54,6 +54,9 @@
    - markus@cvs.openbsd.org 2001/06/23 03:03:59
      [sshd.8]
      draft-ietf-secsh-dh-group-exchange-01.txt
+   - markus@cvs.openbsd.org 2001/06/23 03:04:42
+     [auth2.c auth-rh-rsa.c]
+     restore correct ignore_user_known_hosts logic.
 
 20010622
  - (stevesk) handle systems without pw_expire and pw_change.
@@ -5738,4 +5741,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1310 2001/06/25 04:39:22 mouring Exp $
+$Id: ChangeLog,v 1.1311 2001/06/25 04:40:49 mouring Exp $
